# mountains

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
build-scripts/: clang-format-src.sh
cmake/: FindSDL2.cmake
src/: globals.h  main.cpp  mountains.cpp  mountains.h
src/core/: engine.cpp  engine.h  gamecamera.cpp  gamecamera.h  input.cpp  input.h
src/platform/opengl/: openglbuffer.cpp  openglbuffer.h  openglcontext.cpp  openglcontext.h  openglelementbuffer.cpp  openglelementbuffer.h  openglfont.cpp  openglfont.h  openglmesh.cpp  openglmesh.h  openglmodel.cpp  openglmodel.h  openglrendererapi.cpp  openglrendererapi.h  openglresourcemanager.cpp  openglresourcemanager.h  openglshader.cpp  openglshader.h  openglsprite.cpp  openglsprite.h  opengltexture.cpp  opengltexture.h  openglvertexarray.cpp  openglvertexarray.h
src/renderer/: buffer.h  camera.h  graphicscontext.h  mesh.cpp  mesh.h  rendererapi.h  shader.h  sprite.h  texture.h  vertexarray.h
src/shaders/: shader.frag  shader.vert  sprite.frag  sprite.vert  text.frag  text.vert
